--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,14 @@
-# Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
+title: "TryCatch"
+url: http://lanyon.getpoole.com
+baseurl: ""
 
-# Setup
-title:               'TryCatch'
-tagline:             ''
-description:         ''
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
-paginate:            5
+permalink: pretty
+paginate: 5
 
-# About/contact
+plugins: [jekyll-paginate]
+
 author:
-  name:              Shirsh Zibbu
-  email:             zibbu.shirsh@gmail.com
-  email2:            f2013450@pilani.bits-pilani.ac.in
-  github:            zhirzh
-  resume:            resume
-
-# Custom vars
-version:             1.0.0
+  name: Shirsh Zibbu
+  email: zibbu.shirsh@gmail.com
+  github: zhirzh
+  resume: resume
