--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: "TryCatch"
 baseurl: ""
 
+plugins: [jekyll-paginate]
+
 permalink: :path
 paginate: 5
-
-plugins: [jekyll-paginate]
+paginate_path: "/:num"
